[package]
name = "wttgnstnsrc"
version = "0.1.0"
edition = "2024"
description = "Download Wittgenstein Nachlass facsimiles from wittgensteinsource.org"
license = "MIT"
repository = "https://github.com/fkettelhoit/wttgnstnsrc"
readme = "README.md"
keywords = ["wittgenstein", "nachlass", "facsimile", "deep-zoom"]

[dependencies]
dezoomify-rs = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["charset"] }
scraper = "0.22"
clap = { version = "4", features = ["derive"] }
structopt = "0.3"
anyhow = "1"
futures = "0.3"
printpdf = "0.7"
image = "0.25"
webp = "0.3"
rayon = "1"
